# once-triplex-generator

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: build-android.yml
android-config/: README.md  google-services.json
github/workflows/: build-android.yml
proxy/: main.py  pyproject.toml  requirements.txt  test_main.py
public/: once-triplex-history.json
scripts/: parse-once-data.mjs  stage-firebase-config.mjs
src/: App.tsx  index.css  main.tsx
src/components/: AnalysisDashboard.tsx  AppNav.tsx  Pick3App.tsx  ResultsHistory.tsx
src/hooks/: useOnceLatestResults.ts  usePick3.ts
src/lib/: analysis.test.ts  analysis.ts  appCheck.test.ts  appCheck.ts  drawNotifications.ts  onceResultsSync.ts  onceTriplex.ts  pick3Generator.test.ts  pick3Generator.ts  resultsDb.test.ts  resultsDb.ts
src/pages/: AnalysisPage.tsx  ForecastPage.tsx  HistoryPage.tsx  HomePage.tsx  Index.tsx  PatternsPage.tsx  TerminalAnalysisPage.tsx
