[project]
name = "pick3-results-proxy"
version = "0.1.0"
description = "Florida Pick 3 results proxy"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "google-auth>=2.29.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "tzdata>=2024.1",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
